--- a/my-app/src/styles/CheckoutView.css
+++ b/my-app/src/styles/CheckoutView.css
@@ -1,3 +1,13 @@
+.checkout-phone::-webkit-inner-spin-button,
+.checkout-phone::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.checkout-post-code::-webkit-inner-spin-button,
+.checkout-post-code::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
 .checkout-container {
     width: 100%;
     height: 100%;
