--- a/my-app/src/styles/HomeViewStyle.css
+++ b/my-app/src/styles/HomeViewStyle.css
@@ -125,7 +125,7 @@
   display: flex;
     position:relative;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(auto, auto));
+    grid-template-columns: repeat(auto-fit, minmax(360px, auto));
     gap: 2rem;
     margin: 10px 10px 10px 10px;
     margin-top: 50px;
@@ -358,6 +358,11 @@ font-weight: bolder;
       transform: translateX(-100%);
     }
 }
+@media screen and (max-width: 1112px) {
+  .item2-blackbox .image2-blackbox{
+    display: none;
+  }
+}
 @media(min-aspect-ratio:16/9 )
 {
     .back-video
@@ -532,6 +537,11 @@ padding: 0px 40px 0px 40px;
   
   .products{
     padding: 50px 50px 120px 50px;
-    margin-top: 0px;
+    position:relative;
+    display: grid;
+    grid-template-columns: none;
+    gap: 2rem;
+    margin: 10px 10px 10px 10px;
+    transition: opacity 1s ease-in-out;
   }
 }
