--- a/my-app/src/styles/cartShowComponent.css
+++ b/my-app/src/styles/cartShowComponent.css
@@ -113,6 +113,7 @@ body, html {
     flex-direction: column;
     background-color: rgb(255, 255, 255);
     overflow-y: auto;
+    overflow-x: hidden;
     height: 100%;
     width: 100%;
 }
